[package]
name = "systemview-tracing"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/systemview-tracing"
rust-version = "1.85"

[dependencies]
rtos-trace = { version = "0.1.3", optional = true }
systemview-target = { version = "0.1.2", features = [
    "callbacks-app",
    "callbacks-os",
    "cortex-m",
], optional = true }

[features]
default = []
tracing-enabled = ["dep:rtos-trace", "dep:systemview-target"]

[lints.clippy]
suspicious = "forbid"
correctness = "forbid"
perf = "forbid"
style = "forbid"

[patch.crates-io]
systemview-target = { path = "../rtos-trace/systemview_target" }
