[package]
name = "systemview-tracing"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/systemview-tracing"
rust-version = "1.85"

[dependencies]
defmt = { version = "1.0.1", optional = true }
defmt-rtt = "1.0.0"
rtos-trace = { version = "0.1.3", optional = true }
systemview-target = { version = "0.1.2", features = [
    "callbacks-app",
    "callbacks-os",
    "cortex-m",
], optional = true }

[features]
default = []
tracing-enabled = ["rtos-trace", "systemview-target"]
defmt = ["dep:defmt"]

[lints.clippy]
suspicious = "forbid"
correctness = "forbid"
perf = "forbid"
style = "forbid"
